[tool.poetry]
name = "pycheron"
version = "3.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
include = ["psd/*", "rollseis/*", "metrics/*"]

[tool.poetry.dependencies]
python = "3.9.12"
obspy = "1.4.0"
numpy = "1.26.4"
scipy = "1.13.0"
pandas = "2.2.1"
matplotlib = "3.8.4"
hdf5 = "1.12.1"
future = "0.18.3"
pyhht = "0.1.0"
cx_Oracle = "8.3.0"
snakeviz = "2.1.0"
pebble = "5.0.7"
dash = "2.14.2"
pathlib2 = "2.3.7"
scikit-learn = "1.4.0"
pyyaml = "6.0.1"
PyWavelets = "1.6.0"
statsmodels = "0.14.1"
certifi = "2024.2.2"
pisces = "0.3.2"
pytest = "8.1.1"
pytest-cov = "5.0.0"
coverage = "7.4.4"
testfixtures = "8.1.0"
sqlalchemy = "1.3.17"
mock = "5.1.0"
tables = "3.9.2"
joblib = "1.3.2"
llvmlite = "0.42.0"
numba = "0.59.1"
python-dotenv = "1.0.1"
openpyxl = "3.1.2"
e1 = "0.1.2"
toml = "0.10.2"
imbalanced-learn = "0.12.2"
cmdline-ispaq = {git = "https://github.com/iris-edu/ispaq.git", branch = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.black]
line-length = 120